# live-verify

./: .gitignore  BUILDING.md  CLAUDE.md  CODE_OF_CONDUCT.md  DATA_CLASSIFICATION.md  LICENSE  LICENSE-CONTENT  LICENSING.md  LLM.md  Multi_Representation_Verification.md  PLAN.md  README.md  RESPONSE_FORMAT.md  TESTING.md  TODO.md  Technical_Concepts.md  VERIFICATION-MODES.md  Verification_Charges.md  ci.sh  convert-json-to-markdown-improved.js  draft_blog_entry.md  jest-esm-transformer.js  jest.config.js  package-lock.json  package.json  playwright.config.ts  promoting_live_verify.md  promotion_action_plan.md  test-text-selection-verify.js  webpack.generate-hash.config.js
__tests__/: app-logic.test.js  browser-extension.test.js  content-script-badge.test.js  content-script-detection.test.js  content-script-hide-verify.test.js  cross-platform-hashes.test.js  doc-specific-normalization.test.js  domain-authority.test.js  normalize-trailing-artifacts.test.js  notification-message.test.js  ocr-hash.test.js  training-pages-integration.test.js
backend/: README.md  docker-compose.multi-pod.yml  docker-compose.yml
backend/tier2-inspector/: Cargo.toml  Dockerfile
backend/tier2-inspector/src/: capsicum.rs  main.rs  read_handler.rs  tls.rs  write_handler.rs
deep-dives/: Educational_Degrees.md  Government_IDs.md  Medical_License.md  Product_Labeling.md  Sales_Receipts.md  Voting_Proof.md
docs/: CONTRIBUTING.md  HTML_COMPLEXITY_IN_VERIFIABLE_REGIONS.md  Multi_Representation_Verification.md  NORMALIZATION.md  SAAS-VERIFICATION-PROVIDERS.md  Technical_Concepts.md  delegation.md  (+66 more)
(+912 files in other folders)
