[package]
name = "tier2-inspector"
version = "0.1.0"
edition = "2021"

[features]
capsicum = []

[dependencies]
axum = "0.7"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
